<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/init" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_store"
        android:title="@string/shop" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_news"
        android:title="@string/news" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/friiends" />

</menu>