...
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="-"
                android:textSize="@dimen/spacing_xlarge" />

            <Button
                android:id="@+id/bt_edit"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_rectangle_rounded_corners_filled"
                android:minWidth="100dp"
                android:text="Editar"
...
                android:layout_height="1dp"
                android:background="@color/grey_40" />

            <!-- Tab bar com solo,duo,trio,squa -->

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabIndicatorHeight="3dp"
...
