<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_shop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/adapter_grid_item">

        </androidx.recyclerview.widget.RecyclerView>

        <include
            android:id="@+id/progressBar"
            layout="@layout/progress_bar" />

    </FrameLayout>

</layout>